ebus Daemon (ebusd) - ChangeLog
===============================

2013-02-16:
* Structure for commands improved so only one structure for GET/SET/CYC is needed
* Possible formats for GET / SET (asc, bcd, d1b, d1c, d2b, d2c, dat, tim)
* Commands with format hex will return undecoded data.
* Add d_valid to structure. It will be used to check answers with given items.
* Add functions to decode/encode date and time to library.
* Changed CSV file struture to fit new data structure.

2013-02-10:
* Changed decode datatype from int to bcd
* Add bcd, d2b and d2c too available SET commands
* Change CSV file strutur - move comment on position 4

2013-02-09:
* Upgrade the send ability for ebus SET commands. (only d1b and d1c)

2013-02-06:
* Fix: increase length of ebus command from 20 to 30
* Fix: set initiale value of crclen before escape in eb_send_data_prepare()
* Fix: in eb_msg_decode_result() do strtok on local copy from r_pos. Maybe
       we don't wont do modife the original value.
* Fix: compare strlen of given command with command from csv file too.
* Add: send_retry parameter (2=default) to daemon configuration.

2013-02-04:
* Add the ability to send commands via telnet to daemon
  (This ist just implemented for GET and a few ebus commands for response)
* The telnet commands will collected into a message buffer.
  If the cycle buffer is free, only one command is sent.

2013-02-01:
* Add functions to read ebus command get files and load them into nested
  structure. This will be used to send and decode ebus messages. 
* Try to read daemon configuration file at daemon directory too.
* ebus files splitted into ebus-decode and ebus-bus part.
* Moved log.* from src to lib directory and build liblog.a

2013-01-25:
* Add autogen.sh script in main dir. Just type ./autogen.sh for build all.
* Logging functions changed from level to class system. The advantage of this
  system is that different classes can be easily mixed together.